- Fixed horizontal scrolling due to parallax scrolling and section containers using w-screen instead of w-full.

--- a/banana-shop.frontend/app/tailwind.css
+++ b/banana-shop.frontend/app/tailwind.css
@@ -10,3 +10,7 @@ body {
     color-scheme: dark;
   }
 }
+
+* {
+  outline: 1px solid red;
+}
